# rocket_backend

./: .env  .gitignore  Cargo.toml  README.md  package-lock.json
src/: main.rs
src/api/: mod.rs  product_api.rs  user_api.rs
src/lib/: mod.rs  users_utils.rs
src/models/: mod.rs  product_model.rs  sales_cart.rs  user_model.rs
src/repository/: mongo_repo.rs
