[package]
name = "rocket_rust_framework"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { version = "0.5.0", features = ["json"] }
rocket_cors = "0.6.0"
rocket_dyn_templates = { version = "0.1.0", features = ["tera"] }
serde = "1.0.136"
dotenv = "0.15.0"
chrono = "0.4.33"
password-hash = "0.5.0"
argon2 = "0.5.3"

[dependencies.mongodb]
version = "2.2.0"
default-features = false
features = ["sync"] 
